--- a/MMORPG/src/javafx/UserRegister.fxml
+++ b/MMORPG/src/javafx/UserRegister.fxml
@@ -6,16 +6,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="300.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.UserRegister">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.UserRegister">
    <children>
       <TextField fx:id="usernameInput" layoutX="101.0" layoutY="34.0" prefHeight="25.0" prefWidth="149.0" />
-      <Button fx:id="backButton" layoutX="101.0" layoutY="165.0" mnemonicParsing="false" onAction="#onRegisterButton" prefHeight="25.0" prefWidth="149.0" text="Register" />
-      <Button fx:id="registerButton" layoutX="100.0" layoutY="251.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="25.0" prefWidth="149.0" text="Back" />
       <PasswordField fx:id="passwordInput" layoutX="101.0" layoutY="81.0" prefHeight="25.0" prefWidth="149.0" />
       <PasswordField fx:id="passwordVerificationInput" layoutX="101.0" layoutY="125.0" prefHeight="25.0" prefWidth="149.0" />
+      <TextField fx:id="firstNameInput" layoutX="101.0" layoutY="174.0" prefHeight="25.0" prefWidth="149.0" />
+      <TextField fx:id="lastNameInput" layoutX="101.0" layoutY="218.0" prefHeight="25.0" prefWidth="149.0" />
+      <Button fx:id="backButton" layoutX="101.0" layoutY="261.0" mnemonicParsing="false" onAction="#onRegisterButton" prefHeight="25.0" prefWidth="149.0" text="Register" />
+      <Button fx:id="registerButton" layoutX="100.0" layoutY="347.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="25.0" prefWidth="149.0" text="Back" />
       <Label layoutX="102.0" layoutY="107.0" text="Password" />
       <Label layoutX="102.0" layoutY="63.0" text="Password" />
       <Label layoutX="102.0" layoutY="18.0" text="Username" />
-      <Label fx:id="errorLabel" alignment="CENTER" layoutX="5.0" layoutY="201.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
+      <Label fx:id="errorLabel" alignment="CENTER" layoutX="5.0" layoutY="297.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
+      <Label layoutX="101.0" layoutY="157.0" text="First name" />
+      <Label layoutX="101.0" layoutY="201.0" text="Last name" />
    </children>
 </AnchorPane>
