--- a/MMORPG/src/javafx/UserManagement.fxml
+++ b/MMORPG/src/javafx/UserManagement.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.*?>
 <?import java.util.*?>
+<?import javafx.collections.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -11,14 +12,32 @@
   <children>
     <Label id="subcriptionLabel" fx:id="subscriptionStatusLabel" layoutX="315.0" layoutY="75.0" text="subscriptionstatus" />
     <Label fx:id="nameLabel" layoutX="14.0" layoutY="100.0" text="name" />
-    <Button fx:id="addSubsLabel" layoutX="308.0" layoutY="105.0" mnemonicParsing="false" text="Add Subscription" />
-    <Label fx:id="characterslotLabel" layoutX="175.0" layoutY="75.0" text="characterSlots" />
-    <Button fx:id="addSlotsButton" disable="false" layoutX="175.0" layoutY="105.0" mnemonicParsing="false" text="Add Slots" />
+    <Label fx:id="characterslotLabel" layoutX="188.0" layoutY="75.0" text="characterSlots" />
+    <Button fx:id="addSlotsButton" disable="false" layoutX="219.0" layoutY="105.0" mnemonicParsing="false" onMouseClicked="#confirmBuySlot" prefWidth="44.0" text="Add" />
     <Label fx:id="fundsLabel" layoutX="499.0" layoutY="75.0" text="funds" />
-    <Button fx:id="addFundsLabel" layoutX="476.0" layoutY="105.0" mnemonicParsing="false" text="Add Funds" />
     <Label id="nameLabel" fx:id="usernameLabel" layoutX="15.0" layoutY="75.0" text="username" />
     <Line endX="-100.0" endY="396.0" layoutX="236.0" layoutY="4.0" startX="-100.0" />
     <Line endX="-100.0" endY="396.0" layoutX="376.0" layoutY="4.0" startX="-100.0" />
     <Line endX="-100.0" endY="397.0" layoutX="544.0" layoutY="4.0" startX="-100.0" startY="-3.0" />
+    <Button fx:id="funds5Button" layoutX="487.0" layoutY="108.0" minHeight="17.999908447265625" mnemonicParsing="false" prefHeight="21.0" prefWidth="55.0" text="€5,-" />
+    <Button fx:id="funds10Button" layoutX="487.0" layoutY="137.0" mnemonicParsing="false" prefWidth="55.0" text="€ 10,-" />
+    <ChoiceBox id="addSubsLabel" fx:id="addSubsBox" layoutX="327.0" layoutY="108.0">
+      <items>
+        <FXCollections fx:factory="observableArrayList">
+          <String fx:value="Item 1" />
+          <String fx:value="Item 2" />
+          <String fx:value="Item 3" />
+        </FXCollections>
+      </items>
+    </ChoiceBox>
+    <ChoiceBox id="slotsChoice" fx:id="addSlotsChoice" layoutX="166.0" layoutY="105.0" prefWidth="44.0">
+      <items>
+        <FXCollections fx:factory="observableArrayList">
+          <String fx:value="Item 1" />
+          <String fx:value="Item 2" />
+          <String fx:value="Item 3" />
+        </FXCollections>
+      </items>
+    </ChoiceBox>
   </children>
 </AnchorPane>
