--- a/MMORPG/src/javafx/UserCharacters.fxml
+++ b/MMORPG/src/javafx/UserCharacters.fxml
@@ -9,18 +9,18 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.UserCharacters">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.UserCharacters">
    <children>
       <ChoiceBox fx:id="charactersBox" layoutX="24.0" layoutY="46.0" prefHeight="25.0" prefWidth="150.0" />
-      <Line endY="400.0" layoutX="200.0" layoutY="34.0" startY="-35.0" />
-      <Button layoutX="24.0" layoutY="355.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="New character" />
-      <Label layoutX="24.0" layoutY="318.0" text="Available character slots:" />
+      <Line endY="500.0" layoutX="200.0" layoutY="34.0" startY="-50.0" />
+      <Button fx:id="newCharacterButton" layoutX="24.0" layoutY="355.0" mnemonicParsing="false" onAction="#createCharacter" prefHeight="25.0" prefWidth="150.0" text="New character" />
+      <Label fx:id="characterSlotsLabel" layoutX="24.0" layoutY="318.0" text="Available character slots:" />
       <Button layoutX="436.0" layoutY="396.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Connect to server" />
-      <ChoiceBox disable="true" layoutX="24.0" layoutY="181.0" prefWidth="150.0" />
-      <ChoiceBox disable="true" layoutX="24.0" layoutY="229.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="raceBox" disable="true" layoutX="24.0" layoutY="174.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="classBox" disable="true" layoutX="24.0" layoutY="228.0" prefWidth="150.0" />
       <Label layoutX="24.0" layoutY="24.0" text="Characters" />
-      <Label layoutX="24.0" layoutY="164.0" text="Race" />
-      <Label layoutX="24.0" layoutY="212.0" text="Class" />
+      <Label layoutX="24.0" layoutY="153.0" text="Race" />
+      <Label layoutX="24.0" layoutY="207.0" text="Class" />
       <Label fx:id="characterNameLabel" layoutX="220.0" layoutY="34.0" text="Character name: ">
          <font>
             <Font size="20.0" />
@@ -37,13 +37,18 @@
          </font>
       </Label>
       <Label layoutX="24.0" layoutY="259.0" text="Server" />
-      <ChoiceBox disable="true" layoutX="24.0" layoutY="276.0" prefWidth="150.0" />
-      <Label fx:id="characterServerLabel" layoutX="220.0" layoutY="168.0" text="Server:">
+      <ChoiceBox fx:id="serverBox" disable="true" layoutX="24.0" layoutY="280.0" prefWidth="150.0" />
+      <Label fx:id="characterServerLabel" layoutX="220.0" layoutY="203.0" text="Server:">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
       <Button layoutX="218.0" layoutY="396.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="85.0" text="Delete" />
-      <Button fx:id="managementButton" layoutX="24.0" layoutY="396.0" mnemonicParsing="false" onAction="#openManagementWindow" prefHeight="25.0" prefWidth="150.0" text="Account management" />
+      <Button fx:id="managementButton" layoutX="24.0" layoutY="396.0" mnemonicParsing="false" onAction="#openManagementWindow" prefHeight="25.0" prefWidth="150.0" text="Manage Account" />
+      <Label fx:id="characterLevelLabel" layoutX="220.0" layoutY="166.0" text="Level:">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
