--- a/MMORPG/src/javafx/UserRegister.fxml
+++ b/MMORPG/src/javafx/UserRegister.fxml
@@ -6,20 +6,22 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.UserRegister">
+<AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.UserRegister">
    <children>
       <TextField fx:id="usernameInput" layoutX="101.0" layoutY="34.0" prefHeight="25.0" prefWidth="149.0" />
       <PasswordField fx:id="passwordInput" layoutX="101.0" layoutY="84.0" prefHeight="25.0" prefWidth="149.0" />
       <PasswordField fx:id="passwordVerificationInput" layoutX="101.0" layoutY="133.0" prefHeight="25.0" prefWidth="149.0" />
       <TextField fx:id="firstNameInput" layoutX="101.0" layoutY="183.0" prefHeight="25.0" prefWidth="149.0" />
       <TextField fx:id="lastNameInput" layoutX="101.0" layoutY="231.0" prefHeight="25.0" prefWidth="149.0" />
-      <Button fx:id="backButton" layoutX="101.0" layoutY="268.0" mnemonicParsing="false" onAction="#onRegisterButton" prefHeight="25.0" prefWidth="149.0" text="Register" />
-      <Button fx:id="registerButton" layoutX="100.0" layoutY="347.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="25.0" prefWidth="149.0" text="Back" />
+      <Button fx:id="backButton" layoutX="101.0" layoutY="327.0" mnemonicParsing="false" onAction="#onRegisterButton" prefHeight="25.0" prefWidth="149.0" text="Register" />
+      <Button fx:id="registerButton" layoutX="100.0" layoutY="406.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="25.0" prefWidth="149.0" text="Back" />
       <Label layoutX="102.0" layoutY="114.0" text="Password" />
       <Label layoutX="102.0" layoutY="65.0" text="Password" />
       <Label layoutX="102.0" layoutY="15.0" text="Username" />
-      <Label fx:id="errorLabel" alignment="CENTER" layoutX="5.0" layoutY="316.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
+      <Label fx:id="errorLabel" alignment="CENTER" layoutX="5.0" layoutY="375.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
       <Label layoutX="101.0" layoutY="163.0" text="First name" />
       <Label layoutX="101.0" layoutY="212.0" text="Last name" />
+      <Label layoutX="101.0" layoutY="263.0" text="IBAN:" />
+      <TextField fx:id="ibanInput" layoutX="101.0" layoutY="282.0" prefHeight="25.0" prefWidth="149.0" />
    </children>
 </AnchorPane>
