--- a/MMORPG/src/javafx/UserManagement.fxml
+++ b/MMORPG/src/javafx/UserManagement.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.UserManagement">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="javafx.UserManagement">
   <children>
     <Label id="subcriptionLabel" fx:id="subscriptionStatusLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="325.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" text="subscriptionstatus" />
     <Label fx:id="firstNameLabel" layoutX="10.0" layoutY="82.0" text="firstName" />
@@ -46,7 +46,7 @@
         </FXCollections>
       </items>
     </ChoiceBox>
-    <Button fx:id="addSlotsButton1" disable="false" layoutX="323.0" layoutY="121.0" mnemonicParsing="false" onMouseClicked="#confirmBuySlot" prefHeight="20.0" prefWidth="100.0" text="Add" />
+    <Button fx:id="addSlotsButton1" disable="false" layoutX="323.0" layoutY="121.0" mnemonicParsing="false" onMouseClicked="#confirmBuySubscription" prefHeight="20.0" prefWidth="100.0" text="Add" />
     <Button id="addSlotsButton2" fx:id="addFundsButton" disable="false" layoutX="475.0" layoutY="121.0" mnemonicParsing="false" onMouseClicked="#confirmBuyFunds" prefHeight="20.0" prefWidth="100.0" text="Add" />
     <Label fx:id="lastNameLabel" layoutX="10.0" layoutY="132.0" text="lastName" />
     <Label id="nameLabel" fx:id="usernameLabel1" layoutX="10.0" layoutY="12.0" text="Username:" />
@@ -54,9 +54,9 @@
     <Label fx:id="lastNameLabel1" layoutX="10.0" layoutY="112.0" text="Last name:" />
     <Label fx:id="lastNameLabel11" layoutX="11.0" layoutY="162.0" text="IBAN:" />
     <Label fx:id="ibanLabel" layoutX="11.0" layoutY="182.0" text="iban" />
-      <Button layoutX="9.0" layoutY="224.0" mnemonicParsing="false" onAction="#backToCharacterMenu" prefHeight="25.0" prefWidth="125.0" text="Back" />
-      <Label layoutX="164.0" layoutY="54.0" text="Add slots:" />
-      <Label layoutX="324.0" layoutY="54.0" text="Add time:" />
-      <Label layoutX="478.0" layoutY="54.0" text="Add funds:" />
+    <Button layoutX="9.0" layoutY="224.0" mnemonicParsing="false" onAction="#backToCharacterMenu" prefHeight="25.0" prefWidth="125.0" text="Back" />
+    <Label layoutX="164.0" layoutY="54.0" text="Add slots:" />
+    <Label layoutX="324.0" layoutY="54.0" text="Add time:" />
+    <Label layoutX="478.0" layoutY="54.0" text="Add funds:" />
   </children>
 </AnchorPane>
