--- a/MMORPG/src/javafx/UserCharacters.fxml
+++ b/MMORPG/src/javafx/UserCharacters.fxml
@@ -1,56 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.shape.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.UserCharacters">
-   <children>
-      <ChoiceBox fx:id="charactersBox" layoutX="24.0" layoutY="46.0" prefHeight="25.0" prefWidth="150.0" />
-      <Line endY="500.0" layoutX="200.0" layoutY="34.0" startY="-50.0" />
-      <Button fx:id="newCharacterButton" layoutX="24.0" layoutY="280.0" mnemonicParsing="false" onAction="#createCharacter" prefHeight="25.0" prefWidth="150.0" text="New character" />
-      <Label fx:id="characterSlotsLabel" layoutX="24.0" layoutY="262.0" text="Available character slots:" />
-      <Button fx:id="connectServerButton" layoutX="436.0" layoutY="405.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#connectToServer" prefHeight="25.0" prefWidth="150.0" text="Connect to server" />
-      <ChoiceBox fx:id="raceBox" disable="true" layoutX="24.0" layoutY="176.0" prefWidth="150.0" />
-      <ChoiceBox fx:id="classBox" disable="true" layoutX="24.0" layoutY="228.0" prefWidth="150.0" />
-      <Label layoutX="24.0" layoutY="24.0" text="Characters" />
-      <Label layoutX="24.0" layoutY="156.0" text="Race" />
-      <Label layoutX="24.0" layoutY="207.0" text="Class" />
-      <Label fx:id="characterNameLabel" layoutX="220.0" layoutY="34.0" text="Character name: ">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="characterRaceLabel" layoutX="220.0" layoutY="81.0" text="Race: ">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="characterClassLabel" layoutX="220.0" layoutY="127.0" text="Class: ">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="436.0" layoutY="352.0" text="Server" />
-      <ChoiceBox fx:id="serverBox" layoutX="436.0" layoutY="373.0" prefWidth="150.0" />
-      <Label fx:id="characterServerLabel" layoutX="220.0" layoutY="203.0" text="Server:">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Button fx:id="deleteCharacterButton" layoutX="218.0" layoutY="405.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteCharacter" prefHeight="25.0" prefWidth="85.0" text="Delete" />
-      <Button fx:id="managementButton" layoutX="24.0" layoutY="405.0" mnemonicParsing="false" onAction="#openManagementWindow" prefHeight="25.0" prefWidth="150.0" text="Manage Account" />
-      <Label fx:id="characterLevelLabel" layoutX="220.0" layoutY="166.0" text="Level:">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <TextField fx:id="characterNameInput" disable="true" layoutX="24.0" layoutY="123.0" prefHeight="31.0" prefWidth="150.0" />
-      <Label layoutX="24.0" layoutY="101.0" text="Name" />
-   </children>
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="javafx.UserCharacters">
+  <children>
+    <ChoiceBox fx:id="charactersBox" layoutX="24.0" layoutY="46.0" prefHeight="25.0" prefWidth="150.0" />
+    <Line endY="500.0" layoutX="200.0" layoutY="34.0" startY="-50.0" />
+    <Button fx:id="newCharacterButton" layoutX="24.0" layoutY="280.0" mnemonicParsing="false" onAction="#createCharacter" prefHeight="25.0" prefWidth="150.0" text="New character" />
+    <Label fx:id="characterSlotsLabel" layoutX="24.0" layoutY="262.0" text="Available character slots:" />
+    <Button fx:id="connectServerButton" layoutX="436.0" layoutY="405.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#connectToServer" prefHeight="25.0" prefWidth="150.0" text="Connect to server" />
+    <ChoiceBox fx:id="raceBox" disable="true" layoutX="24.0" layoutY="176.0" prefWidth="150.0" />
+    <ChoiceBox fx:id="classBox" disable="true" layoutX="24.0" layoutY="228.0" prefWidth="150.0" />
+    <Label layoutX="24.0" layoutY="24.0" text="Characters" />
+    <Label layoutX="24.0" layoutY="156.0" text="Race" />
+    <Label layoutX="24.0" layoutY="207.0" text="Class" />
+    <Label fx:id="characterNameLabel" layoutX="220.0" layoutY="34.0" text="Character name: ">
+      <font>
+        <Font size="20.0" fx:id="x1" />
+      </font>
+    </Label>
+    <Label fx:id="characterRaceLabel" font="$x1" layoutX="220.0" layoutY="81.0" text="Race: " />
+    <Label fx:id="characterClassLabel" font="$x1" layoutX="220.0" layoutY="127.0" text="Class: " />
+    <ChoiceBox fx:id="serverBox" layoutX="436.0" layoutY="373.0" prefWidth="150.0" />
+    <Label fx:id="characterServerLabel" font="$x1" layoutX="220.0" layoutY="203.0" text="" />
+    <Button fx:id="deleteCharacterButton" layoutX="218.0" layoutY="405.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteCharacter" prefHeight="25.0" prefWidth="85.0" text="Delete" />
+    <Button fx:id="managementButton" layoutX="24.0" layoutY="405.0" mnemonicParsing="false" onAction="#openManagementWindow" prefHeight="25.0" prefWidth="150.0" text="Manage Account" />
+    <Label fx:id="characterLevelLabel" font="$x1" layoutX="220.0" layoutY="166.0" text="Level:" />
+    <TextField fx:id="characterNameInput" disable="true" layoutX="24.0" layoutY="123.0" prefHeight="31.0" prefWidth="150.0" />
+    <Label layoutX="24.0" layoutY="101.0" text="Name" />
+  </children>
 </AnchorPane>
